--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <section id="what-is-cdn">
                 <h2>What is a CDN?</h2>
                 <p>A Content Delivery Network (CDN) is a geographically distributed network of servers that work together to provide fast delivery of Internet content.</p>
-                <img src="https://example.com/cdn-diagram.jpg" alt="CDN Diagram" width="400">
+                <img src="https://www.telecomhall.net/uploads/db2683/original/3X/9/6/96b682223fb361f325a7510860f48788f5328462.jpeg" alt="CDN Diagram" class="cdn-image">
             </section>
             
             <section id="how-cdns-work">
