--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             <section id="what-is-cdn">
                 <h2>What is a CDN?</h2>
                 <p>A Content Delivery Network (CDN) is a geographically distributed network of servers that work together to provide fast delivery of Internet content.</p>
-                <img src="https://www.telecomhall.net/uploads/db2683/original/3X/9/6/96b682223fb361f325a7510860f48788f5328462.jpeg" alt="CDN Diagram" class="cdn-image">
             </section>
             
             <section id="how-cdns-work">
@@ -70,12 +69,12 @@
         <aside>
             <h3>Fun Facts about CDNs</h3>
             <p>Did you know? The first CDN was developed in the late 1990s to address the "World Wide Wait" problem.</p>
-            <img src="https://example.com/cdn-map.jpg" alt="Global CDN Map" width="250">
+            <img src="https://www.telecomhall.net/uploads/db2683/original/3X/9/6/96b682223fb361f325a7510860f48788f5328462.jpeg" alt="CDN Diagram" class="cdn-image">
         </aside>
     </div>
     
     <footer>
-        <p>Created by [Your Name] | Date: May 2023</p>
+        <p>Created by Layla Marie Pena | Date: 8-28-2024</p>
         <p>Learn more about CDNs: <a href="https://www.cloudflare.com/learning/cdn/what-is-a-cdn/" target="_blank">Cloudflare CDN Guide</a></p>
     </footer>
 </body>
